--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,20 @@ footer {
     width: 100%; /* Chiều rộng */
     text-align: center; /* Căn giữa */
   }
+  h3 {
+    font-size: 20px; /* Cỡ chữ */
+    color: #00aeff; /* Màu chữ */
+    position: fixed; /* Vị trí cố định */
+    bottom: 0; /* Dưới cùng */
+    width: 100%; /* Chiều rộng */
+    text-align: center; /* Căn giữa */
+  }
+#notice {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 300px;
+    background-color: yellow;
+    border: 1px solid black;
+    padding: 10px;
+}
