--- a/styles2.css
+++ b/styles2.css
@@ -1,12 +1,12 @@
 body {
-    font-family: 'Helvetica Neue', sans-serif;
-    background-color: #f5f5f5;
+    font-family: 'Arial', sans-serif;
+    background-color: #D3D3D3; /* Màu nền nhạt, giống bê tông */
     padding: 30px;
     color: #333;
 }
 
 h2 {
-    color: #666;
+    color: #696969; /* Màu xám đậm, giống thép */
     text-shadow: 2px 2px 4px #999;
 }
 
@@ -14,51 +14,75 @@ select, input, button {
     padding: 15px;
     font-size: 18px;
     margin-bottom: 30px;
-    border-radius: 5px; /* Rounded corners */
+    border-radius: 5px; /* Góc tròn */
+    border: 2px solid #696969; /* Viền màu thép */
 }
 
 button {
-    background-color: #008CBA; /* Blue */
+    background-color: #4682B4; /* Màu xanh dương, giống màu của các biển chỉ dẫn công trình */
     border: none;
     color: white;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    transition-duration: 0.4s; /* Transition */
+    transition-duration: 0.4s; /* Hiệu ứng chuyển đổi */
 }
 
 button:hover {
-    background-color: #007B9A; /* Darker blue */
+    background-color: #4169E1; /* Màu xanh dương đậm hơn khi di chuột qua */
 }
 
 #output {
     padding: 30px;
     background-color: #eee;
-    border-radius: 5px; /* Rounded corners */
+    border-radius: 5px; /* Góc tròn */
 }
+
 footer {
-    font-size: 20px; /* Cỡ chữ */
-    color: #00aeff; /* Màu chữ */
-    position: fixed; /* Vị trí cố định */
-    bottom: 0; /* Dưới cùng */
-    width: 100%; /* Chiều rộng */
-    text-align: center; /* Căn giữa */
-  }
-  h3 {
-    font-size: 20px; /* Cỡ chữ */
-    color: #00aeff; /* Màu chữ */
-    position: fixed; /* Vị trí cố định */
-    bottom: 0; /* Dưới cùng */
-    width: 100%; /* Chiều rộng */
-    text-align: center; /* Căn giữa */
-  }
+    font-size: 20px; 
+    color: #00aeff; 
+    position: fixed; 
+    bottom: 0; 
+    width: 100%; 
+    text-align: center; 
+}
+
+h3 {
+    font-size: 20px; 
+    color: #00aeff; 
+    position: fixed; 
+    bottom: 0; 
+    width: 100%; 
+    text-align: center; 
+}
+
 #notice {
     position: fixed;
     bottom: 0;
     right: 0;
     width: 300px;
-    background-color: yellow;
+    background-color: #FFD700; /* Màu vàng, giống màu của các biển cảnh báo công trình */
     border: 1px solid black;
     padding: 10px;
 }
 
+/* Đối với điện thoại di động */
+@media only screen and (max-width: 600px) {
+   body {
+       padding: 10px;
+   }
+   select, input, button {
+       padding: 5px;
+       font-size: 14px;
+       margin-bottom: 15px;
+   }
+   #output {
+       padding: 15px;
+   }
+   footer, h3 {
+       font-size: 16px; 
+   }
+   #notice {
+       width: auto;
+   }
+}
