--- a/styles.css
+++ b/styles.css
@@ -86,3 +86,11 @@ h3 {
        width: auto;
    }
 }
+#notice1 {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: #f9ed69;
+    padding: 10px;
+    border-radius: 10px 10px 0 0;
+}
