--- a/styles2.css
+++ b/styles2.css
@@ -41,17 +41,9 @@ button:hover {
 footer {
     font-size: 20px; 
     color: #00aeff; 
-    position: fixed; 
-    bottom: 0; 
-    width: 100%; 
-    text-align: center; 
-}
-
-h3 {
-    font-size: 20px; 
-    color: #00aeff; 
-    position: fixed; 
-    bottom: 0; 
+    position: absolute; 
+    top: 0; 
+    left: 0; 
     width: 100%; 
     text-align: center; 
 }
@@ -65,6 +57,10 @@ h3 {
     border: 1px solid black;
     padding: 10px;
 }
+.close-btn {
+    float: right;
+    cursor: pointer;
+  }
 #notice1 {
     position: fixed;
     bottom: 0;
@@ -94,3 +90,31 @@ h3 {
        width: auto;
    }
 }
+.menu-btn {
+    font-size: 30px;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+  }
+  
+  #menu {
+    display: none;
+    position: absolute;
+    top: 50px;
+    left: 10px;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+  
+  #menu a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  #menu a:hover {
+    background-color: #f1f1f1
+  }
